# mobomidiplayer

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: key2freq.c  key2freq.h  main.c  main.cpp
src/lib/beep/: README.md  beep.c  beep.h
src/lib/beep/impl/: linux.h
src/lib/tml/: README.md  tml.c
